--- a/Sec_3_Nodejs_Module_system/n3-03-02-importing-core/notes-app/package.json
+++ b/Sec_3_Nodejs_Module_system/n3-03-02-importing-core/notes-app/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "chalk": "^2.4.1",
     "validator": "^13.15.15"
   }
 }
