Sec_4_File_system_and_Comandline_Args ---[#2]--15.Getting_input_from_user

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 Sec_3_Nodejs_Module_system/n3-03-02-importing-core/notes-app/node_modules
+
+Sec_4_File_system_and_Comandline_Args/n3-03-02-importing-core/notes-app/node_modules
