--- a/Sec_4_File_system_and_Comandline_Args/n3-03-02-importing-core/notes-app/package.json
+++ b/Sec_4_File_system_and_Comandline_Args/n3-03-02-importing-core/notes-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "chalk": "^2.4.1",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "yargs": "^12.0.2"
   }
 }
